# api

./: '  .env  .gitignore  .vimspector.json  2  Cargo.toml  Makefile  docker-compose.yml  sqlx-data.json
.github/workflows/: rust.yml
asm/: Cargo.toml
asm/src/: lib.rs
certs/: db.crt  db.key  private.key  server.crt  server.key
configs/: api.yml
db/: 0000001_init.down.sql  0000001_init.up.sql
migrations/: 20221206023745_firstone.down.sql  20221206023745_firstone.up.sql  20221215181630_secondone.down.sql  20221215181630_secondone.up.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/models/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/global/: mod.rs
src/logger/: mod.rs
src/models/: mod.rs  registration.rs
src/tls/: mod.rs
src/web/: helper.rs  mod.rs
src/web/jwt/: mod.rs
src/web/midware/: apimiddle.rs  mod.rs  upload_auth.rs
src/web/router/: auth.rs  mod.rs  register.rs  status.rs  stream.rs  upload.rs
src/web/tls/: mod.rs
