[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# postgres = "0.19"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "uuid", "chrono"]}
tokio-postgres = "0.7"
sql-builder = "3"
uuid = {version = "1.2", features = ["v4"]}
tokio = {version = "1", features = ["full"]}
yaml-rust = "0.4"
tokio-rustls = "0.23"
rustls = "0.20"
tokio-postgres-rustls = "0.9"
rustls-pemfile = "1.0"
chrono = "0.4"
parking_lot = "0.12"
