[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["asm/"]

[[bin]]
name = "api"
path = "./src/main.rs"

[dependencies]
# postgres = "0.19"
# tokio-postgres-rustls = "0.9"
# tokio-postgres = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "uuid", "chrono"]}
sql-builder = "3"
uuid = {version = "1.2", features = ["v4"]}
tokio = {version = "1", features = ["full"]}
yaml-rust = "0.4"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
chrono = "0.4"
parking_lot = "0.12"
actix-web = { version = "4.2", features = ["rustls-0_21", "cookies"] }
actix-web-httpauth = "0.8"
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
anyhow = "1"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0.81"
sha2 = "~0.10"
jsonwebtoken = { version = "9.0.0", features = ["use_pem"] }
openssl = "~0.10"
tracing = "~0.1"
tracing-subscriber = "~0.3"
once_cell = "~1.19"
futures = "0.3"
asm = { path = "./asm" }
rustls-pki-types = "1.0.1"


[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
lto = false
[profile.release]
opt-level = 3
overflow-checks = false
lto = true
